Implement AI-first jtroubleshoot runtime improvements